plugins/screencast: close screencasts on GPU reset

Ideally we'd make the scene persistent and handle GPU resets in the screencast
plugin, but until that's done, closing the screencast is better than crashing.

Fixes https://crash-reports.kde.org/share/issue/73d294e21e53493798c996509bdc5240/

BUG: 513710
(cherry picked from commit a106dc4a535f6dc44b4c7a291ad601dc5b0fc1e2)